--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "node-sass": "^8.0.0",
     "prettier": "^2.7.1",
+    "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "vite": "^3.2.4"
   }
